okd/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ux-questionnaire-front
  name: ux-questionnaire-front
spec:
  replicas: 1
  selector:
    matchLabels:
     app: ux-questionnaire-front        
  template:
    metadata:            
      labels:
        app: ux-questionnaire-front        
    spec:
      containers:
        - name: ux-questionnaire-front
          image: jcgardey/ux-questionnaire-front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
